# ffc

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  Makefile.in  README.md  _tags  configure.ac  design.org
CMakeModules/: CodeCoverage.cmake
editor_syntax/: ff.el
include/: AST.hpp  ASTParser.hpp  CodeGen.hpp  ParserShared.hpp  TokenStream.hpp  optional.hpp  parser.hpp  variant
ocaml/: .gitignore  AST.ml  Dockerfile  Makefile  Makefile.in  _tags  lexer.mll  main.ml  parser.mly
ocaml/src/: AST.ml  Codegen.ml  lexer.mll  main.ml  parser.mly
ocaml/syntax/: lexer.mll  parser.mly
ocaml/tests/: CodegenTests.ml
src/: AST.ml  ASTParser.cpp  CodeGen.cpp  Codegen.ml  ParserHelpers.ml  TokenStream.cpp  main.cpp  main.ml  parser.cpp
syntax/: .gitignore  Makefile  ffc.flex  lexer.mll  output.cpp  parser.mly  test.ff  tokens.hpp
test/: Include.cpp
test/ASTParser/: Asssign.cpp  Decl.cpp  ExternFnc.cpp  FncCall.cpp  If.cpp  Implement.cpp  Include.cpp  OperatorDef.cpp  Ret.cpp  TypeDef.cpp  While.cpp
test/CodeGen/: genFnc.cpp  genFncCall.cpp  mangle.cpp
tests/: CodegenTests.ml  run_tests.ml
